package com.github.jameshnsears.chance.ui.dialog.bag.card.side

class SideTestTag {
    companion object {
        const val SIDE_NUMBER = "SIDE_NUMBER"
        const val SIDE_COLOUR = "SIDE_COLOUR"
        const val SIDE_COLOUR_APPLY_ALL = "SIDE_COLOUR_APPLY_ALL"
        const val SIDE_IMAGE_SVG = "SIDE_IMAGE_SVG"
        const val SIDE_IMAGE_SVG_DROP = "SIDE_IMAGE_SVG_DROP"
        const val SIDE_IMAGE_APPLY_ALL = "SIDE_IMAGE_APPLY_ALL"
        const val SIDE_DESCRIPTION = "SIDE_DESCRIPTION"
        const val SIDE_DESCRIPTION_COLOUR = "SIDE_DESCRIPTION_COLOUR"
        const val SIDE_DESCRIPTION_APPLY_ALL = "SIDE_DESCRIPTION_APPLY_ALL"
    }
}

