package com.github.jameshnsears.chance.ui.dialog.bag.card.roll

class RollTestTag {
    companion object {
        const val ROLL_MULTIPLIER_VALUE = "ROLL_MULTIPLIER_VALUE"
        const val ROLL_EXPLODE = "ROLL_EXPLODE"
        const val ROLL_EXPLODE_CHECKBOX = "ROLL_EXPLODE_CHECKBOX"
        const val ROLL_EXPLODE_WHEN = "ROLL_EXPLODE_WHEN"
        const val ROLL_EXPLODE_VALUE = "ROLL_EXPLODE_VALUE"
        const val ROLL_MODIFY_SCORE = "ROLL_MODIFY_SCORE"
        const val ROLL_MODIFY_SCORE_CHECKBOX = "ROLL_MODIFY_SCORE_CHECKBOX"
        const val ROLL_MODIFY_SCORE_VALUE = "ROLL_MODIFY_SCORE_VALUE"
    }
}

