package com.github.jameshnsears.chance.ui.dialog.bag

class TabTestTag {
    companion object {
        const val TAB_DICE = "TAB_DICE"
        const val TAB_SIDE = "TAB_SIDE"
        const val TAB_ROLL = "TAB_ROLL"
    }
}
