package com.github.jameshnsears.chance.ui.dialog.settings

class DialogSettingsTestTag {
    companion object {
        const val SETTINGS_TIME = "SETTINGS_TIME"
        const val SETTINGS_SCORE = "SETTINGS_SCORE"
        const val SETTINGS_SCORE_TTS = "SETTINGS_SCORE_TTS"

        const val SETTINGS_DICE_TITLE = "SETTINGS_DICE_TITLE"
        const val SETTINGS_SIDE_NUMBER = "SETTINGS_SIDE_NUMBER"
        const val SETTINGS_SIDE_DESCRIPTION = "SETTINGS_SIDE_DESCRIPTION"
        const val SETTINGS_SIDE_SVG = "SETTINGS_SIDE_SVG"
        const val SETTINGS_BEHAVIOUR = "SETTINGS_BEHAVIOUR"
        const val SETTINGS_GROUP_TITLE = "SETTINGS_GROUP_TITLE"
        const val SETTINGS_LAYOUT = "SETTINGS_LAYOUT"
        const val SETTINGS_HISTORY = "SETTINGS_HISTORY"

        const val SETTINGS_ROLL_SHUFFLE = "SETTINGS_ROLL_SHUFFLE"
        const val SETTINGS_ROLL_HAPTICS = "SETTINGS_ROLL_HAPTICS"
        const val SETTINGS_SHAKE_TO_ROLL = "SETTINGS_SHAKE_TO_ROLL"
        const val SETTINGS_ROLL_SOUND = "SETTINGS_ROLL_SOUND"

        const val SETTINGS_UNDO_ALL = "SETTINGS_UNDO_ALL"
    }
}
