package com.github.jameshnsears.chance.ui.group

class GroupTestTag {
    companion object {
        const val GROUP = "GROUP"
        const val NAME = "GROUP_NAME"
        const val DICE_UUIDS = "GROUP_DICE_UUIDS"
        const val NOTES = "GROUP_NOTES"
        const val NOTES_CLEAR = "GROUP_NOTES_CLEAR"
        const val EXPAND = "GROUP_EXPAND"
        const val MOVE_UP = "GROUP_MOVE_UP"
        const val MOVE_DOWN = "GROUP_MOVE_DOWN"
    }
}

