package com.github.jameshnsears.chance.ui.tab.roll

class RollTestTag {
    companion object {
        const val BOTTOM_SHEET = "BOTTOM_SHEET"
        const val UNDO = "UNDO"
        const val ROLL_NOT_ENABLED = "ROLL"
        const val ROLL_ENABLED = "ROLL_ENABLED"
        const val SETTINGS = "SETTINGS"
    }
}
